FIX: add status change api
