# Route/serviceRoute.js
@@ -1,5 +1,5 @@
 const express = require('express');
-const { index, single, store, remove, fakeData, update, start, end, comment } = require('../Controller/serviceController');
+const { index, single, store, remove, fakeData, update, start, end, comment, statusUpdate } = require('../Controller/serviceController');
 const router = express.Router()
 const { createServiceValidator, commentValidator } = require('../validation/serviceValidation')
 const { isAuthenticated } = require('../Config/helper');
@@ -13,7 +13,7 @@ router.patch('/start/:_id', isAuthenticated, start);
 router.patch('/end/:_id', isAuthenticated, end);
 router.patch('/comment/:_id', commentValidator, isAuthenticated, comment);
 router.delete('/:_id', isAuthenticated, remove);
-
+router.patch('/:_id/:task_id', isAuthenticated, statusUpdate);
 
 router.get('/fake/data', fakeData)
 
